# multimodal-machine-learning-models-for-predicting-mechanical-thrombectomy-eligibility

./: .gitignore  README.md  pyproject.toml
mt_eligibility/: load.py  model.py
mt_eligibility/data/: annotations.csv  data_split.csv  master.csv  qer.csv
nbs/: data_distribution.ipynb  qer_performance.ipynb  train_model.ipynb
